﻿2019-10-20
==========
    1. Release 3.0.

2019-11-22
==========
    1. Updated project structure.
    
2019-11-25
==========
    1. Reorganized solutions.
    
2020-11-14
==========
    1. Huge dev refactoring.

2021-03-01
==========
    1. Resurrection.

2021-04-17
==========
    1. Got rid of GUID-based 'Identity'.

2022-07-28
==========
    1. Release 1.3.7.

2023-01-23
==========
    1. Winter resurrection - 2023.

2023-04-09
==========
    1. Ported from lab.