@@ -1,4 +1,8 @@
-﻿2019-12-20
+﻿2022-05-05
+==========
+    1. Fix order of todos and changelog
+
+2019-12-20
 ==========
 X   1. [TauCode.Db problem] If a SQLite table creation script has e.g. VARCHAR(20) instead of (valid) TEXT, a truncation exception will be thrown.
 
