@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.Domain</id>
-    <version>1.8.1-alpha.1.2023-04-08.16-21</version>
+    <version>1.9.1-alpha.1.2023-05-05.00-02</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -13,7 +13,7 @@
       Basic TauCode domain-aware functionality
     </description>
     <releaseNotes>
-      Developing release 1.8.1.
+      Developing release 1.9.1.
     </releaseNotes>
     <tags>taucode domain</tags>
     <dependencies>
