@@ -1,91 +1,79 @@
-﻿namespace TauCode.Domain.Events
+﻿namespace TauCode.Domain.Events;
+
+// todo regions
+public class DomainEventPublisher : IDomainEventPublisher
 {
-    public class DomainEventPublisher : IDomainEventPublisher
+    /// <summary>
+    /// Stores the current domain event publisher in an AsyncLocal so that this can be static and globally available per request, 
+    /// and still support async methods.
+    /// </summary>
+    private static readonly AsyncLocal<IDomainEventPublisher> CurrentStorage = new();
+
+    /// <summary>
+    /// Get the current domain event publisher. Each call context (e.g. thread) will get its own instance.
+    /// Remember that call contexts are copied from the parent thread, 
+    /// so DO NOT use this property in the main thread, unless the whole application should have the same instance.
+    /// </summary>
+    public static IDomainEventPublisher Current
     {
-        /// <summary>
-        /// Stores the current domain event publisher in an AsyncLocal so that this can be static and globally available per request, 
-        /// and still support async methods.
-        /// </summary>
-        private static readonly AsyncLocal<IDomainEventPublisher> _current = new AsyncLocal<IDomainEventPublisher>();
-
-        /// <summary>
-        /// Get the current domain event publisher. Each call context (e.g. thread) will get its own instance.
-        /// Remember that call contexts are copied from the parent thread, 
-        /// so DO NOT use this property in the main thread, unless the whole application should have the same instance.
-        /// </summary>
-        public static IDomainEventPublisher Current
+        get
         {
-            get
+            var domainEventPublisher = CurrentStorage.Value;
+
+            if (domainEventPublisher == null)
             {
-                var domainEventPublisher = _current.Value;
-
-                if (domainEventPublisher == null)
-                {
-                    domainEventPublisher = new DomainEventPublisher();
-                    _current.Value = domainEventPublisher;
-                }
-
-                return domainEventPublisher;
-            }
-        }
-
-        /// <summary>
-        /// Dispose the current domain event publisher.
-        /// </summary>
-        public static void Dispose()
-        {
-            _current.Value = null!;
-        }
-
-        private readonly IList<object> _subscribers;
-
-        /// <summary>
-        /// Private constructor for creating a domain event publisher.
-        /// The <see cref="DomainEventPublisher.Current"/> property (factory method) is the public method for getting an instance.
-        /// </summary>
-        private DomainEventPublisher()
-        {
-            _subscribers = new List<object>();
-        }
-
-        /// <summary>
-        /// <see cref="IDomainEventPublisher.Publish{T}(T)"/>
-        /// </summary>
-        public void Publish<T>(T domainEvent) where T : IDomainEvent
-        {
-            foreach (var subscriber in this._subscribers)
-            {
-                if (subscriber is IDomainEventSubscriber<T> || subscriber is IDomainEventSubscriber<IDomainEvent>)
-                {
-                    ((IDomainEventSubscriber<T>)subscriber).HandleEvent(domainEvent);
-                }
-            }
-        }
-
-        /// <summary>
-        /// <see cref="IDomainEventPublisher.Subscribe{T}(IDomainEventSubscriber{T})"/>
-        /// </summary>
-        public void Subscribe<T>(IDomainEventSubscriber<T> subscriber) where T : IDomainEvent
-        {
-            if (subscriber == null)
-            {
-                throw new ArgumentNullException(nameof(subscriber));
+                domainEventPublisher = new DomainEventPublisher();
+                CurrentStorage.Value = domainEventPublisher;
             }
 
-            _subscribers.Add(subscriber);
+            return domainEventPublisher;
         }
+    }
 
-        /// <summary>
-        /// <see cref="IDomainEventPublisher.Unsubscribe{T}(IDomainEventSubscriber{T})"/>
-        /// </summary>
-        public void Unsubscribe<T>(IDomainEventSubscriber<T> subscriber) where T : IDomainEvent
+    /// <summary>
+    /// Dispose the current domain event publisher.
+    /// </summary>
+    public static void Dispose()
+    {
+        CurrentStorage.Value = null!;
+    }
+
+    private readonly HashSet<IDomainEventHandler> _handlers = new();
+
+    public async Task PublishAsync(IDomainEvent domainEvent, CancellationToken cancellationToken)
+    {
+        // todo: clever dispatching
+        foreach (var handler in _handlers)
         {
-            if (subscriber == null)
+            if (handler.CanHandle(domainEvent))
             {
-                throw new ArgumentNullException(nameof(subscriber));
+                await handler.HandleAsync(domainEvent, cancellationToken); // todo: try/catch here
             }
-
-            _subscribers.Remove(subscriber);
         }
+    }
+
+    public void AddHandler(IDomainEventHandler domainEventHandler)
+    {
+        if (domainEventHandler == null)
+        {
+            throw new ArgumentNullException(nameof(domainEventHandler));
+        }
+
+        if (_handlers.Contains(domainEventHandler))
+        {
+            throw new InvalidOperationException(); // todo message
+        }
+
+        _handlers.Add(domainEventHandler);
+    }
+
+    public bool RemoveHandler(IDomainEventHandler domainEventHandler)
+    {
+        if (domainEventHandler == null)
+        {
+            throw new ArgumentNullException(nameof(domainEventHandler));
+        }
+
+        return _handlers.Remove(domainEventHandler);
     }
 }
